--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 .aside {
-  background-color: aqua;
+  color: rgb(255, 255, 255);
+  background: linear-gradient(to right, rgb(88, 88, 90), rgb(0, 0, 0));
 }
 
 .alignment {
@@ -8,13 +9,12 @@
 }
 
 .avatar {
-  width: 300px;
+  width: 100%;
   height: 300px;
 }
 
 .head {
   background-color: aquamarine;
-  text-align: left;
   margin-top: 50px;
 }
 
@@ -23,5 +23,48 @@
 }
  
 h1{
+  text-align: center;
   margin-bottom: -10px;
+}
+
+.unbold {
+  text-align: center;
+  margin-top: -5px;
+  font-size: 30px;
+  font-style: italic;
+}
+
+.line {
+  margin-right: 20px;
+  border-bottom: 2px solid #000000;
+}
+
+.lineaside {
+  margin-left: 50px;
+  margin-right: 20px;
+  border-bottom: 2px solid #bcea45;
+}
+
+.starcss {
+  display: flex;
+  flex-direction: row;
+  width: 20px;
+  height: 20px;
+  background-color: yellow;
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+}
+
+
+.star {
+  display: flex;
+  flex-direction: row;
+}
+
+.starempty {
+  display: flex;
+  flex-direction: row;
+  width: 20px;
+  height: 20px;
+  background-color: rgb(193, 193, 193);
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
 }
