--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
-.background {
-  background: linear-gradient(to right, rgb(181, 181, 216), rgb(109, 150, 178));
-}
+@font-face {
+  font-family: Roboto;
+   src: url("assets/fonts/Roboto.ttf");
+ }
 
 .aside {
   color: rgb(255, 255, 255);
@@ -8,6 +9,9 @@
 }
 
 .alignment {
+  background: linear-gradient(to right, rgb(181, 181, 216), rgb(109, 150, 178));
+  margin: 0 auto;
+  width: 80%;
   display: flex;
   flex-direction: row-reverse;
 }
@@ -71,4 +75,8 @@ h1{
   height: 20px;
   background-color: rgb(193, 193, 193);
   clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+}
+
+body {
+  font-family: 'Roboto';
 }
